# rocket-study

./: Cargo.toml  Dockerfile  Makefile  Rocket.toml
migration/: Cargo.toml
migration/src/: lib.rs
src/: main.rs
src/routes/: mod.rs
src/routes/calculator/: index.rs
src/routes/uuid/: get_uuid_v4.rs  get_uuid_v7.rs  get_uuids_v4.rs  get_uuids_v7.rs  mod.rs
