[package]
edition = "2021"
name = "rocket-study"
version = "0.1.0"

[dependencies]
rocket = {version = "0.5.1", features = ["json", "http2", "uuid"]}
utoipa = {version = "5.0.0", features = ["rocket_extras"]}
utoipa-swagger-ui = {version = "8.0.0", features = ["rocket"]}

[dependencies.uuid]
features = ["v1", "v4", "v7"]
version = "1"
