[package]
edition = "2021"
name = "rocket-study"
version = "0.1.0"

[dependencies]
llvm-sys = "191.0.0"
rocket = {version = "0.5.1", features = ["json", "http2", "uuid"]}
sea-orm = {version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"]}
utoipa = {version = "5.1.3", features = ["rocket_extras"]}
utoipa-swagger-ui = {version = "8.0.3", features = ["rocket"]}

[dependencies.uuid]
features = ["v1", "v4", "v7"]
version = "1"
