[package]
edition = "2024"
name = "rocket-study"
version = "0.1.0"

[dependencies]
dotenvy = "0.15.7"
llvm-sys = "191.0.0"
rocket = {version = "0.5.1", features = ["json", "http2", "uuid"]}
sea-orm = {version = "1.1.7", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"]}
utoipa = {version = "5.3.1", features = ["rocket_extras"]}
utoipa-swagger-ui = {version = "9.0.0", features = ["rocket"]}

[dependencies.uuid]
features = ["v1", "v4", "v7"]
version = "1.15.1"
